Fixed alignment and padding

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
+	width: 90%;
 }
 
 h1,
@@ -52,6 +53,7 @@ header h1 {
 	margin: 0;
 	padding: 1em 0;
 	border-bottom: 3px solid #77a466;
+	text-align: center;
 }
 
 header h1 span {
@@ -59,7 +61,8 @@ header h1 span {
 }
 
 header nav {
-	padding: 46px 0;	
+	padding: 1em 0;
+	text-align: center;	
 }
 
 header nav ul {
@@ -90,24 +93,17 @@ header nav ul li a{
 	flex-flow: column wrap;
 }
 
-.main-image {
-
-}
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-
-}
 .main-title h2 {
 	text-align: left;
 	padding: 0.3125em 0.3em 0 2em;
 	color: #77a466;
 }
 .main-title p {
-	padding: 0 0.3em 0 2em;
 	font-size: 1em;
 	line-height: 1.5625em;
 }
